--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,27 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/GameFeaver5.csproj.nuget.dgspec.json
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/project.assets.json
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/project.nuget.cache
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/GameFeaver5.assets.cache
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/GameFeaver5.GeneratedMSBuildEditorConfig.editorconfig
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/project.razor.vscode.bin
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/staticwebassets.build.json
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/staticwebassets.development.json
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/staticwebassets.pack.json
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/staticwebassets.publish.json
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/designtime/libraryprojectimports.cache
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-ios/iossimulator-x64/GameFeaver5.GeneratedMSBuildEditorConfig.editorconfig
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-ios/iossimulator-x64/GameFeaver5.assets.cache
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-ios/iossimulator-x64/project.razor.vscode.bin
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-maccatalyst/maccatalyst-x64/GameFeaver5.assets.cache
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-maccatalyst/maccatalyst-x64/GameFeaver5.GeneratedMSBuildEditorConfig.editorconfig
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-maccatalyst/maccatalyst-x64/project.razor.vscode.bin
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/GameFeaver5.assets.cache
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/GameFeaver5.GeneratedMSBuildEditorConfig.editorconfig
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/project.razor.vscode.bin
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/staticwebassets.build.json
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/staticwebassets.development.json
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/staticwebassets.pack.json
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/staticwebassets.publish.json
