--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,89 @@ cython_debug/
 04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/staticwebassets.development.json
 04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/staticwebassets.pack.json
 04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/staticwebassets.publish.json
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/GameFeaver5.AssemblyInfo.cs
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/GameFeaver5.AssemblyInfoInputs.cache
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/GameFeaver5.assets.cache
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/GameFeaver5.GeneratedMSBuildEditorConfig.editorconfig
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/flat/values_colors.arsc.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable_maui_splash_image.xml.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-hdpi_dotnet_bot.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-hdpi_splash.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-mdpi_dotnet_bot.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-mdpi_splash.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-v31_maui_splash_image.xml.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-xhdpi_dotnet_bot.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-xhdpi_splash.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-xxhdpi_dotnet_bot.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-xxhdpi_splash.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-xxxhdpi_dotnet_bot.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-xxxhdpi_splash.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-anydpi-v26_appicon_round.xml.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-anydpi-v26_appicon.xml.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-hdpi_appicon_background.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-hdpi_appicon_foreground.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-hdpi_appicon.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-mdpi_appicon_background.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-mdpi_appicon_foreground.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-mdpi_appicon.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xhdpi_appicon_background.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xhdpi_appicon_foreground.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xhdpi_appicon.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xxhdpi_appicon_background.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xxhdpi_appicon_foreground.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xxhdpi_appicon.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xxxhdpi_appicon_background.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xxxhdpi_appicon_foreground.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xxxhdpi_appicon.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/values_maui_colors.arsc.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-ios/iossimulator-x64/GameFeaver5.AssemblyInfo.cs
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-ios/iossimulator-x64/GameFeaver5.AssemblyInfoInputs.cache
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-maccatalyst/maccatalyst-x64/GameFeaver5.AssemblyInfo.cs
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-maccatalyst/maccatalyst-x64/GameFeaver5.AssemblyInfoInputs.cache
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/apphost.exe
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/GameFeaver5.AssemblyInfo.cs
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/GameFeaver5.AssemblyInfoInputs.cache
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/GameFeaver5.GeneratedMSBuildEditorConfig.editorconfig
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/GameFeaver5.AssemblyInfo.cs
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/GameFeaver5.AssemblyInfoInputs.cache
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/GameFeaver5.assets.cache
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/GameFeaver5.GeneratedMSBuildEditorConfig.editorconfig
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/flat/values_colors.arsc.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable_maui_splash_image.xml.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-hdpi_dotnet_bot.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-hdpi_splash.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-mdpi_dotnet_bot.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-mdpi_splash.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-v31_maui_splash_image.xml.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-xhdpi_dotnet_bot.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-xhdpi_splash.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-xxhdpi_dotnet_bot.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-xxhdpi_splash.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-xxxhdpi_dotnet_bot.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/drawable-xxxhdpi_splash.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-anydpi-v26_appicon_round.xml.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-anydpi-v26_appicon.xml.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-hdpi_appicon_background.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-hdpi_appicon_foreground.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-hdpi_appicon.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-mdpi_appicon_background.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-mdpi_appicon_foreground.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-mdpi_appicon.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xhdpi_appicon_background.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xhdpi_appicon_foreground.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xhdpi_appicon.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xxhdpi_appicon_background.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xxhdpi_appicon_foreground.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xxhdpi_appicon.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xxxhdpi_appicon_background.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xxxhdpi_appicon_foreground.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/mipmap-xxxhdpi_appicon.png.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/resizetizer/flat/values_maui_colors.arsc.flat
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-ios/iossimulator-x64/GameFeaver5.AssemblyInfo.cs
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-ios/iossimulator-x64/GameFeaver5.AssemblyInfoInputs.cache
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-maccatalyst/maccatalyst-x64/GameFeaver5.AssemblyInfo.cs
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-maccatalyst/maccatalyst-x64/GameFeaver5.AssemblyInfoInputs.cache
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/apphost.exe
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/GameFeaver5.AssemblyInfo.cs
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/GameFeaver5.AssemblyInfoInputs.cache
+04-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-windows10.0.19041.0/win10-x64/GameFeaver5.GeneratedMSBuildEditorConfig.editorconfig
