tsp started to work

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,11 @@ packages = [{include = "primeri_predavanja"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 gurobipy = "^10.0.3"
-linopy = ">=0.3"
+linopy = ">=0.3.15"
 plotnine = "^0.12.4"
 networkx = "^3.2.1"
 matplotlib = "^3.8.1"
-xarray = "^2023.10.1"
+xarray = ">=2024.2.0"
 torch = "^2.4.1"
 
 
