--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
         "plotnine",
         "pylab",
         "usecols",
-        "xarray"
+        "xarray",
+        "xend",
+        "yend"
     ]
 }
