--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
         "Opti",
         "plotnine",
         "pylab",
+        "Subtour",
+        "subtours",
         "usecols",
         "xarray",
         "xend",
