--- a/.gitignore
+++ b/.gitignore
@@ -1080,3 +1080,5 @@ cython_debug/
 03-02-celobrojno-programiranje/02-feaver5/game-feaver5/obj/Debug/net7.0-android/lp/110/jl/flat/110.flata
 obj
 bin
+/03-02-celobrojno-programiranje/02-feaver5/game-feaver5/.vs/GameFeaver5/FileContentIndex/b50d184c-4f3c-425f-b57e-7a9cee95c2f7.vsidx
+/03-02-celobrojno-programiranje/02-feaver5/game-feaver5/.vs/GameFeaver5/v17/TestStore/0/000.testlog
