highs replaced gurobi

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,18 @@
 {
     "cSpell.words": [
         "Dyna",
+        "Filipovic",
         "ggplot",
         "gurobi",
         "gurobipy",
+        "highspy",
         "linopy",
+        "matplotlib",
         "networkx",
         "Opti",
         "plotnine",
+        "predavanja",
+        "primeri",
         "pylab",
         "Subtour",
         "subtours",
