--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "celobrojno",
         "Dyna",
         "Filipovic",
         "ggplot",
@@ -13,6 +14,7 @@
         "plotnine",
         "predavanja",
         "primeri",
+        "programiranje",
         "pylab",
         "Subtour",
         "subtours",
